--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -1,5 +1,4 @@
 .moviesList {
-	width: 85%;
 	margin-inline: auto;
 	row-gap: rem(75);
 	font-size: rem(75);
@@ -7,9 +6,19 @@
 	position: relative;
 	top: rem(80);
 
-	img {
-		width: rem(175);
-		display: block;
-		position: relative;
+	display: grid;
+	grid-template-columns: repeat(auto-fill, minmax(rem(300), 1fr));
+	place-items: center;
+	padding-bottom: rem(75);
+
+	span {
+		width: 60%;
+		img {
+			display: inline-block;
+			width: 100%;
+			height: 100%;
+			object-fit: cover;
+			vertical-align: middle;
+		}
 	}
 }
